# dedupe

./: .gitignore  Makefile  README.md  dedupe.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-tests.yml
src/dedupe/: __init__.py
tests/: test_dedupe.py
