[project]
name = "dedupe"
version = "2.0.0"
description = "Utility for comparing files based on various hashing algorithms"
authors = [{ name = "Jesse Almanrode", email = "jesse@almanrode.com" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = "MIT"
dependencies = [
    "blake3>=1.0.8",
    "click>=8.1.8",
]

[project.scripts]
dedupe = "dedupe:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "pytest>=8.4.2",
    "ruff>=0.11.13",
    "ty>=0.0.5",
]

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "B", "SIM", "I"]
ignore = ["E501", "F401"]
